--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "jest --forceExit"
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1",
