--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -15,6 +15,7 @@ jobs:
           echo "Building of node application is starting.."
   deploy-dev:
     runs-on: ubuntu-latest
+    needs: [ build ]
     steps:
       - uses: actions/checkout@v4
       - name: Print step name
@@ -22,6 +23,7 @@ jobs:
           echo "Deployment to DEV has started.."
   test-dev:
     runs-on: ubuntu-latest
+    needs: [ deploy-dev ]
     steps:
       - uses: actions/checkout@v4
       - name: Print step name
@@ -29,6 +31,7 @@ jobs:
           echo "Testing BOOKS test set on DEV has started.."
   deploy-stg:
     runs-on: ubuntu-latest
+    needs: [ test-dev ]
     steps:
       - uses: actions/checkout@v4
       - name: Print step name
@@ -36,6 +39,7 @@ jobs:
           echo "Deployment to STG has started.."
   test-stg:
     runs-on: ubuntu-latest
+    needs: [ deploy-stg ]
     steps:
       - uses: actions/checkout@v4
       - name: Print step name
@@ -43,6 +47,7 @@ jobs:
           echo "Testing BOOKS test set on STG has started.."
   deploy-prd:
     runs-on: ubuntu-latest
+    needs: [ test-stg ]
     steps:
       - uses: actions/checkout@v4
       - name: Print step name
@@ -50,6 +55,7 @@ jobs:
           echo "Deployment to PRD has started.."
   test-prd:
     runs-on: ubuntu-latest
+    needs: [ deploy-prd ]
     steps:
       - uses: actions/checkout@v4
       - name: Print step name
