--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - name: Print step name
         run: 
           echo "Building of node application is starting.."
   deploy-dev:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ build ]
     steps:
       - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
         run: 
           echo "Deployment to DEV has started.."
   test-dev:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ deploy-dev ]
     steps:
       - uses: actions/checkout@v4
@@ -30,7 +30,7 @@ jobs:
         run: 
           echo "Testing BOOKS test set on DEV has started.."
   deploy-stg:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ test-dev ]
     steps:
       - uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
         run: 
           echo "Deployment to STG has started.."
   test-stg:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ deploy-stg ]
     steps:
       - uses: actions/checkout@v4
@@ -46,7 +46,7 @@ jobs:
         run: 
           echo "Testing BOOKS test set on STG has started.."
   deploy-prd:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ test-stg ]
     steps:
       - uses: actions/checkout@v4
@@ -54,7 +54,7 @@ jobs:
         run: 
           echo "Deployment to PRD has started.."
   test-prd:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ deploy-prd ]
     steps:
       - uses: actions/checkout@v4
