--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -25,8 +25,8 @@ jobs:
           echo "Deployment to DEV has started.."
       - name: Install all dependencies
         run: npm install
-      - name: Delete existing pm2 service
-        run: pm2 delete "BOOKS-DEV"
+      # - name: Delete existing pm2 service
+      #   run: pm2 delete "BOOKS-DEV"
       - name: Run sample-book-app pm2 service
         run: pm2 start -n "BOOKS-DEV" index.js -- 1050
   test-dev:
