--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -10,11 +10,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
-      - name: Print step name
-        run: 
-          echo "Building of node application is starting.."
-      - name: Install all dependencies
-        run: npm install
+      - uses: ./.githuh/actions/build
   deploy-dev:
     runs-on: self-hosted
     needs: [ build ]
@@ -28,7 +24,7 @@ jobs:
       # - name: Delete existing pm2 service
       #   run: pm2 delete "BOOKS-DEV"
       - name: Run sample-book-app pm2 service
-        run: pm2 start -n "BOOKS-DEV" index.js -- 1050
+        run: pm2 start -n "books-DEV" index.js -- 1050
   test-dev:
     runs-on: self-hosted
     needs: [ deploy-dev ]
