--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.githuh/actions/build
+      - uses: ./.github/actions/build
   deploy-dev:
     runs-on: self-hosted
     needs: [ build ]
