--- a/.github/workflows/sample-book-app.yml
+++ b/.github/workflows/sample-book-app.yml
@@ -16,15 +16,10 @@ jobs:
     needs: [ build ]
     steps:
       - uses: actions/checkout@v4
-      - name: Print step name
-        run: 
-          echo "Deployment to DEV has started.."
-      - name: Install all dependencies
-        run: npm install
-      # - name: Delete existing pm2 service
-      #   run: pm2 delete "BOOKS-DEV"
-      - name: Run sample-book-app pm2 service
-        run: pm2 start -n "books-DEV" index.js -- 1050
+      - uses: ./.github/actions/deploy
+        with:
+          environment: 'DEV'
+          port: '1050'
   test-dev:
     runs-on: self-hosted
     needs: [ deploy-dev ]
@@ -32,7 +27,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: 'mdaugavietis/api-automation'
-          ref: 'main'
       - name: Print step name
         run: 
           echo "Testing BOOKS test set on DEV has started.."
@@ -45,9 +39,10 @@ jobs:
     needs: [ test-dev ]
     steps:
       - uses: actions/checkout@v4
-      - name: Print step name
-        run: 
-          echo "Deployment to STG has started.."
+      - uses: ./.github/actions/deploy
+        with:
+          environment: 'STG'
+          port: '2050'
   test-stg:
     runs-on: self-hosted
     needs: [ deploy-stg ]
@@ -61,9 +56,10 @@ jobs:
     needs: [ test-stg ]
     steps:
       - uses: actions/checkout@v4
-      - name: Print step name
-        run: 
-          echo "Deployment to PRD has started.."
+      - uses: ./.github/actions/deploy
+        with:
+          environment: 'PRD'
+          port: '3050'
   test-prd:
     runs-on: self-hosted
     needs: [ deploy-prd ]
