--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -17,7 +17,7 @@ runs:
         run: npm install
         shell: bash
       - name: Delete existing pm2 service
-        run: RUNNER_TRACKING_ID="" && pm2 delete "books-${{ inputs.environment }}" || exit 0
+        run: RUNNER_TRACKING_ID="" && pm2 delete "BOOKS-${{ inputs.environment }}" || exit 0
         shell: bash
       - name: Run sample-book-app pm2 service
         run: pm2 start -n "BOOKS-${{ inputs.environment }}" index.js -- ${{ inputs.port }}
